[package]
name = "hermit-loader"
version = "0.5.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>", "Colin Finck <colin.finck@rwth-aachen.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
align-address = "0.1"
cfg-if = "1"
hermit-entry = { version = "0.10", features = ["loader"] }
log = "0.4"
one-shot-mutex = "0.1"
sptr = "0.3"
take-static = "0.1"
vm-fdt = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
default = []
fc = []

[target.'cfg(all(target_os = "none", target_arch = "x86_64"))'.dependencies]
multiboot = "0.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.3"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9"
hermit-dtb = { version = "0.1" }
goblin = { version = "0.8", default-features = false, features = ["elf64"] }

[target.'cfg(target_os = "none")'.dependencies]
allocator-api2 = { version = "0.2", default-features = false }
exclusive_cell = "0.1"
spinning_top = "0.3"

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.28", features = ["alloc"] }
uefi-services = { version = "0.25", default-features = false, features = ["panic_handler", "qemu"] }
qemu-exit = "3"

[target.'cfg(target_arch = "riscv64")'.dependencies]
fdt = "0.1"
naked-function = "0.1"
riscv = "0.11"
sbi-rt = "0.0.3"
sptr = "0.3"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[workspace]
members = [
	"xtask",
]
