[package]
name = "hermit-loader"
version = "0.5.6"
authors = ["The Hermit Project Developers"]
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
align-address = "0.4"
allocator-api2 = { version = "0.4", default-features = false }
anstyle = { version = "1", default-features = false }
cfg-if = "1"
hermit-entry = { version = "0.10", features = ["loader"] }
log = "0.4"
one-shot-mutex = "0.2"
take-static = "0.1"
vm-fdt = { version = "0.3", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11"
enum_dispatch = "0.3"
fdt = { version = "0.1" }
goblin = { version = "0.10", default-features = false, features = ["elf64"] }
volatile = { version = "0.6", features = ["derive"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
fdt = "0.1"
naked-function = "0.1"
sbi-rt = "0.0.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
linux-boot-params = { version = "0.17", optional = true }
multiboot = { version = "0.8", optional = true }
uart_16550 = "0.4"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

[target.'cfg(target_os = "uefi")'.dependencies]
anyhow = { version = "1", default-features = false }
uefi = { version = "0.36", features = ["alloc", "panic_handler", "qemu"] }

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

# FIXME: When target-specific features exist, remove the workaround features.
# https://github.com/rust-lang/cargo/issues/1197
[features]
default = []
elf = []
linux = []
multiboot = []
sbi = []
x86_64-linux = ["linux", "dep:linux-boot-params"]
x86_64-multiboot = ["multiboot", "dep:multiboot"]

[profile.dev]
# This is a workaround for the loader growing too large to boot with QEMU's multiboot.
# This broke last with nightly-2024-06-29 (https://github.com/rust-lang/rust/compare/9c3bc805dd9cb84019c124b9a50fdff1e62a7ec9...e9e6e2e444c30c23a9c878a88fbc3978c2acad95)
# We should fix this properly, allowing larger loaders to still function correctly.
opt-level = 1

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[workspace]
members = ["xtask"]
